# ramener

./: .gitignore  README.md  pyproject.toml  read_samples.py  requirements.txt
packaging/: ramener.icns  ramener.spec
scripts/: build_dmg.sh  create_release.sh  generate_icon.py  install_finder_toolbar.sh  make_icns.py
src/ramener/: __main__.py  config.py  file_ops.py  llm_client.py  main.py  metadata.py  naming.py  ocr_extractor.py  pdf_extractor.py  settings.py  settings_ui.py  text_sanitizer.py  title_heuristics.py
