[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ramener"
version = "0.1.0"
description = "AI-assisted PDF renamer for macOS Finder Quick Actions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pypdf>=4.0.0",
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
    "send2trash>=1.8.2",
]

[project.optional-dependencies]
dev = []

[project.scripts]
ramener = "ramener.main:main"

[tool.setuptools.packages.find]
where = ["src"]
